[package]
name = "assembly-machine"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "*"

[dependencies]
assembly_machine_macros = { path = "../assembly_machine_macros" }
lalrpop-util = { version = "*", features = [ "lexer" ] }
serde = { version = "*", features = [ "derive" ] }
ron = "*"
fastrand = "*"
unescape = "*"

[dev-dependencies]
divan = "*"

[[bench]]
name = "bench"
harness = false
